<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:padding="20dp"
    tools:context="com.bobygoma.redciudadana.AskingForHelpFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/the_request_for_help_is_due_to"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/ingrese_su_direccion"
        android:text="@string/direccion" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextAddress"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonInjuredAccident"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/buttonHeartAttack"
            android:background="@drawable/button_rounded_yellow"
            android:text="@string/injured_accident" />

        <Button
            android:id="@+id/buttonHeartAttack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_rounded_yellow"
            android:text="@string/heart_attack" />

        <Button
            android:id="@+id/buttonFainting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editTextAddress"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_rounded_yellow"
            android:text="@string/fainting" />

        <Button
            android:id="@+id/buttonOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonInjuredAccident"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_rounded_yellow"
            android:text="@string/other" />
    </LinearLayout>

</RelativeLayout>
