<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:src="@drawable/nurse" />

    <Button
        android:id="@+id/buttonPanic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/button_rounded_yellow"
        android:text="@string/boton_de_panico"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/buttonAskForHelp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/button_border"
        android:text="@string/ask_for_help"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:id="@+id/linearLayoutButtonWrapper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonToBeVolunteer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded_cian"
            android:padding="10dp"
            android:textAllCaps="false"
            android:text="@string/to_be_volunteer"/>

        <Button
            android:id="@+id/buttonEmergencies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded_yellow"
            android:text="@string/emergencies"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded_yellow"
            android:text="@string/information"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/buttonProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded_yellow"
            android:text="@string/perfil"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded_yellow"
            android:text="@string/logout"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>
